--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="./fenomenos/astro.html">fenômenos</a></li>
         <li><a href="./telescopios/telescopios.html">Telescópios</a></li>
         <li><a href="./ssolar/ssolar.html">Sistema solar</a></li>
+        <li><a href="./profi/gravidade.html">Gravidade</a></li>
       </ul>
     </div>
     <header class="main-header">
@@ -29,7 +30,7 @@
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="./bootstrap-5.3.0-alpha1-examples/index.html">Sobre nós</a></li>
-          <li><a href="./QUIZ/index.html">Veja nosso quiz!</a></li>
+          <li><a href="./quizAstroWorld/quiz.html">Veja nosso quiz!</a></li>
         </ul>
       </nav>
 </header>
