concertando erro do Sol

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       <div class="section-inner">
         <h4>Envolto ao Sol</h4>
         <h2>EXplore o sistema solar.</h2>
-        <a href="../TCC oficial/ssolar/ssolar.html" class="btn">
+        <a href="./ssolar/ssolar.html" class="btn">
           <div class="hover"></div>
           <span>Veja mais!</span>
         </a>
