--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
     <!-- Section C -->
     <section class="section-c">
       <div class="section-inner">
-        <h4>Principal ferramenta de exploração espacial</h4>
-        <h2>Telescópios</h2>
-        <a href="../TCC oficial/telescopios/telescopios.html" class="btn">
+        <h2>Gravidade</h2>
+        
+        <a href="./profi/gravidade/gravidade.html" class="btn">
           <div class="hover"></div>
           <span>Veja mais sobre</span>
         </a>
