--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <header class="main-header">
       <div class="logo">
-       <a href="../tcc prototipo/index.html">
+       <a href="index.html">
           <img src="./image/logo.png" alt="AstroWorld"/> 
         </a>
       </div>
@@ -92,7 +92,7 @@
       <div class="section-inner">
         <h2>Gravidade</h2>
         
-        <a href="./profi/gravidade/gravidade.html" class="btn">
+        <a href="./profi/gravidade.html" class="btn">
           <div class="hover"></div>
           <span>Veja mais sobre</span>
         </a>
